=== release 0.2.0 ===

2007-02-06  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/muxers/flv/flv.py:
	  Change FLV muxer to use MultiInputParseLaunchComponent, so this
	  isn't deadlock-prone.

2007-01-05  Julien MOUTTE  <julien@moutte.net>

	* flumotion-flash.spec.in: Remove noarch from spec.

2006-12-30  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/mp3/mp3.xml: Add an audiorate
	property.

2006-12-29  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/muxers/flv/flv.xml: Components have to
	have unique names...
