@@ -1,10 +1,14 @@
 include $(top_srcdir)/common/python.mk
 include $(top_srcdir)/common/trial.mk
 
+setup.py: $(top_builddir)/config.status
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+
 BUILT_SOURCES = setup.py
 
 EXTRA_DIST = __init__.py
 
-CLEANFILES = $(BUILT_SOURCES)
-
 check-local: trial
+
+clean-local:
+	rm -f $(BUILT_SOURCES)
